# DSView

./: .gitignore
DSView/: CMakeLists.txt
DSView/pv/view/: ruler.cpp  ruler.h  view.cpp
Linux/: README  build-debug  build-release  prepare-dsview
MSYS2/: README_MSYS2  build-msys2  msys2-64-packages
MXE/: README_MXE  build-mxe  dsview-mxe-debug  dsview-mxe-release  rebuild-mxe-debug  rebuild-mxe-release
